--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline{
 
     stages{
 
-        stage('Compile Stage){
+        stage('Compile Stage'){
            steps{
                withMaven(maven: 'maven_3'){
                     sh 'mvn clean compile'
@@ -19,7 +19,7 @@ pipeline{
             }
         }
 
-        stage('Deploy Stage''){
+        stage('Deploy Stage'){
             steps{
                 withMaven(maven: 'maven_3'){
                     sh 'mvn deploy'
