Fix maven version jenkinsfile

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline{
 
         stage('Compile Stage'){
            steps{
-               withMaven(maven: 'maven_3'){
+               withMaven(maven: 'maven-3.5.4'){
                     sh 'mvn clean compile'
                 }
             }
@@ -13,7 +13,7 @@ pipeline{
 
         stage('Test Stage'){
             steps{
-                withMaven(maven: 'maven_3'){
+                withMaven(maven: 'maven-3.5.4'){
                     sh 'mvn test'
                 }
             }
@@ -21,7 +21,7 @@ pipeline{
 
         stage('Deploy Stage'){
             steps{
-                withMaven(maven: 'maven_3'){
+                withMaven(maven: 'maven-3.5.4'){
                     sh 'mvn deploy'
                 }
             }
