Apply variable Maven fix2

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,9 +6,11 @@ pipeline{
         stage('Compile Stage'){
            steps{
                withMaven(maven: 'maven-3.5.4'){
-                    sh 'MAVEN_PATH=/Users/danielsimiao/Documents/Maven/apache-maven-3.5.4/bin'
-                     'cd /Users/danielsimiao/IdeaProjects/ff-qa-AutoTesterAdmin'
-                     'sudo $MAVEN_PATH/mvn clean compile'
+             sh  """
+                    MAVEN_PATH=/Users/danielsimiao/Documents/Maven/apache-maven-3.5.4/bin \\
+                    cd /Users/danielsimiao/IdeaProjects/ff-qa-AutoTesterAdmin \\
+                    sudo $MAVEN_PATH/mvn compile
+                """
                 }
             }
         }
@@ -16,9 +18,11 @@ pipeline{
         stage('Test Stage'){
             steps{
                 withMaven(maven: 'maven-3.5.4'){
-                    sh 'MAVEN_PATH=/Users/danielsimiao/Documents/Maven/apache-maven-3.5.4/bin'
-                     'cd /Users/danielsimiao/IdeaProjects/ff-qa-AutoTesterAdmin'
-                     'sudo $MAVEN_PATH/mvn test'
+                    sh  """
+                        MAVEN_PATH=/Users/danielsimiao/Documents/Maven/apache-maven-3.5.4/bin \\
+                        cd /Users/danielsimiao/IdeaProjects/ff-qa-AutoTesterAdmin \\
+                        sudo $MAVEN_PATH/mvn test
+                        """
                 }
             }
         }
@@ -26,9 +30,11 @@ pipeline{
         stage('Deploy Stage'){
             steps{
                 withMaven(maven: 'maven-3.5.4'){
-                    sh 'MAVEN_PATH=/Users/danielsimiao/Documents/Maven/apache-maven-3.5.4/bin'
-                     'cd /Users/danielsimiao/IdeaProjects/ff-qa-AutoTesterAdmin'
-                     'sudo $MAVEN_PATH/mvn deploy'
+                  sh  """
+                     MAVEN_PATH=/Users/danielsimiao/Documents/Maven/apache-maven-3.5.4/bin \\
+                     cd /Users/danielsimiao/IdeaProjects/ff-qa-AutoTesterAdmin \\
+                     sudo $MAVEN_PATH/mvn deploy
+                     """
                 }
             }
         }
