Apply variable Maven fix4 test alpha01

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,9 +6,7 @@ pipeline{
         stage('Compile Project Stage'){
            steps{
                withMaven(maven: 'maven-3.5.4'){
-             sh  """
-                    sudo mvn compile
-                """
+                    sh "sudo mvn compile"
                 }
             }
         }
@@ -16,9 +14,7 @@ pipeline{
         stage('Test Project Stage'){
             steps{
                 withMaven(maven: 'maven-3.5.4'){
-                    sh  """
-                        sudo mvn test
-                        """
+                    sh "sudo mvn test"
                 }
             }
         }
@@ -26,9 +22,7 @@ pipeline{
         stage('Deploy Project Stage'){
             steps{
                 withMaven(maven: 'maven-3.5.4'){
-                  sh  """
-                     sudo mvn deploy
-                     """
+                    sh "sudo mvn deploy"
                 }
             }
         }
