--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,8 @@ pipeline{
         stage('Compile Project Stage'){
            steps{
                withMaven(maven: 'maven-3.5.4'){
-                    sh 'mvn compile'
+                    sh 'MAVEN_PATH=/Users/danielsimiao/Documents/Maven/apache-maven-3.5.4/bin \\
+                        mvn compile'
                 }
             }
         }
