--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline{
 
     stages{
 
-        stage('Compile Stage'){
+        stage('Compile Project Stage'){
            steps{
                withMaven(maven: 'maven-3.5.4'){
                 sh  """
@@ -14,7 +14,7 @@ pipeline{
             }
         }
 
-        stage('Test Stage'){
+        stage('Test Projec Stage'){
             steps{
                 withMaven(maven: 'maven-3.5.4'){
                     sh  """
@@ -25,7 +25,7 @@ pipeline{
             }
         }
 
-        stage('Deploy Stage'){
+        stage('Deploy Projec Stage'){
             steps{
                 withMaven(maven: 'maven-3.5.4'){
                   sh  """
