Apply variable Maven fix4 test alpha01

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,10 +2,14 @@ pipeline{
     agent any
 
     stages{
-
+        def mvn_version = 'M3'
+            withEnv( ["PATH+MAVEN=${tool mvn_version}/bin"] ) {
+                //sh "mvn clean package"
+            }
         stage('Compile Stage'){
            steps{
-               withMaven(maven: 'maven-3.5.4'){
+               def mvn_version = 'maven-3.5.4'
+               withMaven(["PATH+MAVEN=${tool mvn_version}/bin"]){
                 sh  """
                         mvn compile
                     """
