--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,29 +3,13 @@ pipeline{
 
     stages{
 
-        stage('Compile Stage'){
-           steps{
-               withMaven(maven: 'maven-3.5.4'){
-                    sh  "mvn compile"
-                }
-            }
-        }
 
-        stage('Test Stage'){
-            steps{
-                withMaven(maven: 'maven-3.5.4'){
-                    sh  "mvn test"
-
-                }
-            }
-        }
-
-        stage('Deploy Stage'){
-            steps{
-                withMaven(maven: 'maven-3.5.4'){
-                    sh  "mvn deploy"
-                }
-            }
-        }
+      def mvnHome = tool 'maven-3.5.4'
+      stage("Build package") {
+           withMaven(
+             maven: 'maven-3.5.3'){
+             }
+           sh "cd $mvnHome/bin/mvn clean test"
+         }
     }
 }
