--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,7 @@ pipeline{
            steps{
                withMaven(maven: 'maven-3.5.4'){
                 sh  """
+                cd /Users/Shared/Jenkins/Home/workspace/pipeline-Jenkins-Sample
                         mvn compile
                     """
                 }
@@ -17,6 +18,8 @@ pipeline{
             steps{
                 withMaven(maven: 'maven-3.5.4'){
                     sh  """
+                                    cd /Users/Shared/Jenkins/Home/workspace/pipeline-Jenkins-Sample
+
                             mvn test
                         """
                 }
@@ -27,6 +30,7 @@ pipeline{
             steps{
                 withMaven(maven: 'maven-3.5.4'){
                   sh  """
+                                  cd /Users/Shared/Jenkins/Home/workspace/pipeline-Jenkins-Sample
                             mvn deploy
                      """
                 }
